Add test scripts for AIOT integration and OurBit price fetching: introduced multiple test scripts to validate AIOT price retrieval from OurBit, including tests for main system integration, direct price extraction, and UI verification. Updated configuration to enable OurBit and improved exchange handling for better price data accuracy.

--- a/public/index.html
+++ b/public/index.html
@@ -637,7 +637,7 @@
 
             // Get currencies and their exchange data
             const currencies = Object.keys(exchangeData.currencies);
-            const exchanges = ['mexc', 'lbank', 'kcex', 'dexscreener'];
+            const exchanges = ['mexc', 'lbank', 'ourbit', 'kcex', 'dexscreener'];
 
             console.log('🔍 Debug - Currencies:', currencies);
             console.log('🔍 Debug - Exchanges:', exchanges);
